--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,17 @@
     "name": "nrslib/clarc",
     "require": {
         "php": "^7.2",
-        "duncan3dc/blade": "4.8.0"
+        "duncan3dc/blade": "4.8.0",
+        "nrslib/cfg": "0.1.9",
+        "nrslib/clarc-php-core": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Clarc\\": "clarc/"
+            "Clarc\\": "framework/"
         },
         "files": [
-            "clarc/Basis/helpers.php"
+            "framework/Basis/helpers.php"
         ]
     }
 }
